refactor: null handling + immutable list